homework-3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-app-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: server-app
    template:
       metadata:
          labels:
             app: server-app
       spec:
          containers:
          - name: server-app
            image: vbeliakou/server-app:v1
            ports:
              - name: web
                containerPort: 3000
