homework-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-app-service
spec:
  selector:
    app: server-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: ClusterIP
