homework-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "server.app"
    http:
      paths:
      - path: /myapp($|/)(.*)
        pathType: Prefix
        backend:
          service:
            name: server-app-service
            port:
              number: 9000
